# cvface

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  gen-src.sh
cvface/: build.gradle.kts
cvface/src/main/java/cvface/: CVFace.java
